--- a/_config.yml
+++ b/_config.yml
@@ -14,12 +14,12 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Lahlali Soufiane # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: This is My Personal Blog # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  unknownboy , Blog , Github
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -98,7 +98,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: https://media.licdn.com/dms/image/v2/D4E03AQFyqCGZpqdzlg/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1727887350852?e=1748476800&v=beta&t=BnBHcQbqNral3GgAGQx_k-Ym4DrUf0LmQFqdl0j9KaQ
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
